<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>

    <groupId>edu.courseflow</groupId>
    <artifactId>courseflow-backend</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>courseflow-backend</name>
    <description>CourseFlow LMS microservice backend (v2)</description>

    <properties>
        <revision>2.0.0</revision>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-cloud.version>2023.0.3</spring-cloud.version>
        <testcontainers.version>1.21.4</testcontainers.version>
        <minio.version>8.5.13</minio.version>
        <mapstruct.version>1.6.3</mapstruct.version>
    </properties>

    <modules>
        <module>common-library</module>
        <module>event-contracts</module>
        <module>services/discovery-service</module>
        <module>services/access-control-service</module>
        <module>services/user-management-service</module>
        <module>services/identity-token-converter-service</module>
        <module>services/organization-service</module>
        <module>services/course-service</module>
        <module>services/enrollment-service</module>
        <module>services/assignment-service</module>
        <module>services/deadline-service</module>
        <module>services/announcement-service</module>
        <module>services/portfolio-service</module>
        <module>services/discussion-service</module>
        <module>services/notification-service</module>
        <module>services/chat-service</module>
        <module>services/media-service</module>
        <module>services/search-service</module>
        <module>services/analytics-service</module>
        <module>services/gradebook-service</module>
        <module>services/quiz-service</module>
        <module>services/certificate-service</module>
        <module>services/peer-review-service</module>
        <module>services/live-session-service</module>
        <module>services/review-service</module>
        <module>services/promotion-service</module>
        <module>services/loyalty-service</module>
        <module>services/api-gateway</module>
        <module>services/outbox-relay</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>edu.courseflow</groupId>
                <artifactId>common-library</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>edu.courseflow</groupId>
                <artifactId>event-contracts</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    <updatePomFile>true</updatePomFile>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
